--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./estilo.css">
     <link rel="stylesheet" href="./style.css">
-    <title>Pueba de bootstrap</title>
+    <title>Qatar 2022</title>
 </head>
 
 <body class="bg-light">
@@ -106,7 +106,7 @@
         </div>
     </nav>
     <div class="bg-light mt-5 mb-5">
-        <h1 class="text-dark text-center">hola mundo</h1>
+        <p> imagenes en carousel para linkearlas a otra web</p>
     </div>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
