ultimo cambio index y css

--- a/index.html
+++ b/index.html
@@ -105,26 +105,102 @@
           </div>
         </div>
     </nav>
-    <div class="bg-light mt-5 mb-5">
-        <p> imagenes en carousel para linkearlas a otra web</p>
+    <div class="bg-light mt-1 mb-1">
+      <img src="./img/header_mundial.jpg" alt="" width="100%">
     </div>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"  aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"  aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"  aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"  aria-label="Slide 6"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"  aria-label="Slide 7"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"  aria-label="Slide 8"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8"  aria-label="Slide 9"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9"  aria-label="Slide 10"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10"  aria-label="Slide 11"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11"  aria-label="Slide 12"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12"  aria-label="Slide 13"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13"  aria-label="Slide 14"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="14"  aria-label="Slide 15"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="15"  aria-label="Slide 16"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="16"  aria-label="Slide 17"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="17"  aria-label="Slide 18"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="18"  aria-label="Slide 19"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="19"  aria-label="Slide 20"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="20"  aria-label="Slide 21"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="21"  aria-label="Slide 22"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="22"  aria-label="active"></button>
         </div>
-        <div class="carousel-inner" >
-          <div class="carousel-item active" class="justify-content-center">
-            <img src="./img/mundialargentina78.jpg" class="d-block w-25" alt="d-block h-25" >
+        <div class="carousel-inner">
+          <div class="carousel-item active" >
+            <center><img src="./img/mundialuruguay30.jpg"  class="d-block w-25" alt="d-block 25" > </center>
           </div>
           <div class="carousel-item" >
-            <img src="./img/mundialalemania74.jpg"  class="d-block w-25" alt="d-block 25" >
+            <center><img src="./img/mundialitalia34.jpg"  class="d-block w-25" alt="d-block 25" > </center>
+          </div>
+          <div class="carousel-item" >
+            <center> <img src="./img/mundialfrancia38.jpg" class="d-block w-25" alt="d-block h-25"> </center>
           </div>
           <div class="carousel-item">
-            <img src="./img/mundialmexico86.jpg" class="d-block w-25" alt="d-block 25">
+            <center><img src="./img/mundialbrasil50.jpg" class="d-block w-25" alt="d-block 25"> </center>
           </div>
-        </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialsuiza54.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialsuecia58.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialchile62.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialinglaterra66.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialmexico70.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item" >
+            <center><img src="./img/mundialalemania74.jpg"  class="d-block w-25" alt="d-block 25" > </center>
+          </div>
+          <div class="carousel-item" >
+            <center> <img src="./img/mundialargentina78.jpg" class="d-block w-25" alt="d-block h-25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialespaña82.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialmexico86.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialitalia90.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialusa94.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialfrancia98.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialjaponcorea2002.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialalemania2006.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialsudafrica2010.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialbrasil2014.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialrusia2018.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
+          <div class="carousel-item">
+            <center><img src="./img/mundialQATAR-2022.jpg" class="d-block w-25" alt="d-block 25"> </center>
+          </div>
         <div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -148,10 +224,9 @@
     </section>
 </fieldset>
 
-  
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2020 Copyright:
+      © 2020 Copyright: Bichi
       <a class="text-white" href="https://mdbootstrap.com/"></a>
     </div>
     <!-- Copyright -->
