--- a/index.html
+++ b/index.html
@@ -9,24 +9,26 @@
     <link rel="stylesheet" href="./estilo.css">
     <title>Qatar 2022</title>
 </head>
-
-<body class="bg-light">
+<header>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <div class="container-fluid ">
-          <a class="navbar-brand text-light" href="#">Mundial Qatar 2022</a>
+          <a class="navbar-brand text-light" href="index.html">Mundial Qatar 2022</a>
           <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item ">
-                <a class="nav-link active text-light text-center" aria-current="page" href="./gruposmundial.html">Grupos Mundial Qatar 22</a>
+                <a class="nav-link active text-light text-center" aria-current="page" href="./mundialqatarfixture.html">Grupos Mundial Qatar 22</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-light text-center" href="./mundiales.html">mundiales tabla</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light text-center" href="./img/mascotas_mundiales.jpg">Mascotas de mundiales</a>
+                <a class="nav-link text-light text-center" href="./mascotasmundial.html">Mascotas de mundiales</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light text-center" href="./musicamundiales.html">Musica de los mundiales</a>
               </li>
               <li class="nav-item">
 
@@ -103,6 +105,7 @@
           </div>
         </div>
     </nav>
+</header>
     <div class="bg-secondary mt-1 mb-1">
       <img src="./img/header_mundial.jpg" alt="" width="100%">
     </div>
